Practicas/Segunda Convo/JavaCC/Ejemplos parser/test_Parser/test1.jj
options
{
  STATIC=false;
}

PARSER_BEGIN(parEqui)

public class parEqui{

    /*
     * A test
     */
    public static void main (String[] args) throws Exception {
      parEqui parser = new parEqui(System.in);
      parser.parse();
    }

}

PARSER_END(parEqui)

/*
 * The terminals
 */

TOKEN : {
  <OPEN: "(">
| <CLOSE: ")">
}

/*
 * The nonterminals
 */

void parse () : {} {
  balanced () 
  "."
}

void balanced () : {} {
  (
    <OPEN>
    balanced () 
    <CLOSE> 
  )*
}
